<resources>
  <string name="app_name">MyCalcu</string>
  <string name="calc_text"></string>
  <string name="seven">7</string>
  <string name="eight">8</string>
  <string name="nine">9</string>
  <string name="divide">/</string>
  <string name="four">4</string>
  <string name="five">5</string>
  <string name="six">6</string>
  <string name="multiply">*</string>
  <string name="one">1</string>
  <string name="two">2</string>
  <string name="three">3</string>
  <string name="minus">-</string>
  <string name="zero">0</string>
  <string name="clr">CLR</string>
  <string name="plus">+</string>
  <string name="equal">=</string>
  <string name="dot">.</string>
</resources>