<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

  <TextView
      android:id="@+id/tvInput"
      android:layout_width="match_parent"
      android:layout_height="250dp"
      android:background="@color/lightGray"
      android:text="@string/calc_text"
      android:textSize="48sp"
      android:padding="10dp"
      android:gravity="end|bottom"/>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:layout_weight="1"
  >

    <Button
        android:id="@+id/btnSeven"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:backgroundTint="@color/gray"
        android:text="@string/seven"
        android:layout_margin="2dp"
        android:onClick="onDigit"
    />
    <Button
        android:id="@+id/btnEight"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:backgroundTint="@color/gray"
        android:text="@string/eight"
        android:layout_margin="2dp"
        android:onClick="onDigit"
    />
    <Button
        android:id="@+id/btnNine"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:backgroundTint="@color/gray"
        android:text="@string/nine"
        android:layout_margin="2dp"
        android:onClick="onDigit"
    />
    <Button
        android:id="@+id/btnDivide"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:backgroundTint="@color/gray"
        android:text="@string/divide"
        android:layout_margin="2dp"
        android:onClick="onDigit"
    />

  </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:layout_weight="1"
  >

    <Button
        android:id="@+id/btnFour"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:backgroundTint="@color/gray"
        android:text="@string/four"
        android:layout_margin="2dp"
        android:onClick="onDigit"
    />
    <Button
        android:id="@+id/btnFive"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:backgroundTint="@color/gray"
        android:text="@string/five"
        android:layout_margin="2dp"
        android:onClick="onDigit"
    />
    <Button
        android:id="@+id/btnSix"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:backgroundTint="@color/gray"
        android:text="@string/six"
        android:layout_margin="2dp"
        android:onClick="onDigit"
    />
    <Button
        android:id="@+id/Multiply"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:backgroundTint="@color/gray"
        android:text="@string/multiply"
        android:layout_margin="2dp"
        android:onClick="onDigit"
    />

  </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:layout_weight="1"
  >

    <Button
        android:id="@+id/btnOne"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:backgroundTint="@color/gray"
        android:text="@string/one"
        android:layout_margin="2dp"
        android:onClick="onDigit"
    />

    <Button
        android:id="@+id/btnTwo"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:backgroundTint="@color/gray"
        android:text="@string/two"
        android:layout_margin="2dp"
        android:onClick="onDigit"
    />

    <Button
        android:id="@+id/btnThree"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:backgroundTint="@color/gray"
        android:text="@string/three"
        android:layout_margin="2dp"
        android:onClick="onDigit"
    />

    <Button
        android:id="@+id/btnSubtract"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:backgroundTint="@color/gray"
        android:text="@string/minus"
        android:layout_margin="2dp"
        android:onClick="onDigit"
    />

  </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:layout_weight="1"
  >

    <Button
        android:id="@+id/btnDot"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:backgroundTint="@color/gray"
        android:text="@string/dot"
        android:layout_margin="2dp"
        android:onClick="onDecimalPoint"
    />

    <Button
        android:id="@+id/btnZero"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:backgroundTint="@color/gray"
        android:text="@string/zero"
        android:layout_margin="2dp"
        android:onClick="onDigit"
    />

    <Button
        android:id="@+id/btnClear"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:backgroundTint="@color/gray"
        android:text="@string/clr"
        android:layout_margin="2dp"
        android:onClick="onClear"
    />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:backgroundTint="@color/gray"
        android:text="@string/plus"
        android:layout_margin="2dp"
        android:onClick="onDigit"
    />

  </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:layout_weight="1"
  >

    <Button
        android:id="@+id/btnEqual"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:backgroundTint="@color/gray"
        android:text="@string/equal"
        android:layout_margin="2dp"
        android:onClick="onDigit"
    />

  </LinearLayout>
</LinearLayout>